# nu_plugin_audio_hook

./: .mailmap  AUTHORS  Cargo.toml  README.md  nupm.nuon
.github/workflows/: dependency-update.yaml
src/: audio_meta.rs  audio_player.rs  constants.rs  lib.rs  main.rs  sound_make.rs  utils.rs
