[package]
name = "nu_plugin_audio_hook"
version = "0.110.0"
edition = "2021"
description = "A nushell plugin to make and play sounds"
homepage = "https://github.com/FMotalleb/nu_plugin_audio_hook"
repository = "https://github.com/FMotalleb/nu_plugin_audio_hook"
readme = "README.md"
license = "MIT"
keywords = [
    "nushell",
    "audio",
    "mp3",
    "player",
    "plugin",
]

[package.metadata]
authors-file = "AUTHORS"

[dependencies]
chrono = "0.4.41"
env_logger = "0.11"
log = "0.4"
interprocess = "=2.2.1" # TODO: remove once nu-plugin-core no longer depends on interprocess <2.3

[dependencies.crossterm]
version = "0.29"

[dependencies.nu-plugin]
version = "0.110.0"

[dependencies.nu-protocol]
version = "0.110.0"
features = ["plugin"]

[dependencies.rodio]
version = "0.21.1"

[dependencies.unicode-width]
version = "0.2"

[dependencies.lofty]
version = "0.23"

[features]
# ── Recommended ─────────────────────────────────────────────────────────────
# Enables every available decoder. Adds support for AAC, MP4/M4A, ALAC,
# ADPCM, CAF, MKV/WebM (Opus), and all Symphonia-based variants of the
# default formats on top of the default feature set.
all-decoders = [
    "default",
    "symphonia-all",
]

# ── Default ──────────────────────────────────────────────────────────────────
# A lightweight set covering the most common formats.
# MP3 (via Symphonia), FLAC, OGG Vorbis, WAV.
default = [
    "flac",
    "vorbis",
    "wav",
    "symphonia-mp3",
]

# ── Individual format flags ───────────────────────────────────────────────────
# FLAC — lossless compression, widely used for archival audio.
flac = ["rodio/flac"]

# OGG Vorbis — open lossy format, common in games and open-source media.
vorbis = ["rodio/vorbis"]

# WAV — uncompressed PCM; universal but large file sizes.
wav = ["rodio/wav"]

# MP3 via minimp3 — lightweight alternative MP3 decoder.
# Use symphonia-mp3 instead unless you have a specific reason to prefer this.
minimp3 = ["rodio/minimp3"]

# ── Symphonia-based decoders ──────────────────────────────────────────────────
# Symphonia is a pure-Rust audio decoding library with broader format support.
# Individual flags let you opt into specific formats without pulling everything.

# MP3 via Symphonia — default MP3 decoder; better accuracy than minimp3.
symphonia-mp3 = ["rodio/symphonia-mp3"]

# AAC — lossy format used by Apple, YouTube, and most streaming services.
symphonia-aac = ["rodio/symphonia-aac"]

# FLAC via Symphonia — alternative to the default rodio FLAC decoder.
symphonia-flac = ["rodio/symphonia-flac"]

# MP4 / M4A — container format; required for AAC and ALAC in .m4a files.
symphonia-isomp4 = ["rodio/symphonia-isomp4"]

# OGG Vorbis via Symphonia — alternative to the default rodio Vorbis decoder.
symphonia-vorbis = ["rodio/symphonia-vorbis"]

# WAV via Symphonia — alternative to the default rodio WAV decoder.
symphonia-wav = ["rodio/symphonia-wav"]

# All Symphonia decoders — enables every format Symphonia supports, including:
#   ALAC (Apple Lossless), ADPCM, CAF (Core Audio Format),
#   MKV / WebM (Opus), and all of the individual flags above.
# Note: ALAC, ADPCM, CAF, and MKV/Opus are only available through this
# bundle flag; rodio does not expose them individually.
symphonia-all = ["rodio/symphonia-all"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 2
strip = true
